tests/ui/rust-2024/unsafe-extern-blocks/safe-unsafe-on-unadorned-extern-block.stderr
error: items in unadorned `extern` blocks cannot have safety qualifiers
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:2:5
   |
LL | extern "C" {
   | ---------- help: add unsafe to this `extern` block
LL |     safe static TEST1: i32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: items in unadorned `extern` blocks cannot have safety qualifiers
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:4:5
   |
LL | extern "C" {
   | ---------- help: add unsafe to this `extern` block
...
LL |     safe fn test1(i: i32);
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

